@@ -35,6 +35,7 @@
     <xi:include href="xml/element-dvdemux.xml" />
     <xi:include href="xml/element-esdsink.xml" />
     <xi:include href="xml/element-flacdec.xml" />
+    <xi:include href="xml/element-gamma.xml" />
     <xi:include href="xml/element-goom.xml" />
     <xi:include href="xml/element-halaudiosink.xml" />
     <xi:include href="xml/element-halaudiosrc.xml" />
@@ -44,6 +45,7 @@
     <xi:include href="xml/element-jpegdec.xml" />
     <xi:include href="xml/element-jpegenc.xml" />
     <xi:include href="xml/element-level.xml" />
+    <xi:include href="xml/element-monoscope.xml" />
     <xi:include href="xml/element-multiudpsink.xml" />
     <xi:include href="xml/element-multipartmux.xml" />
     <xi:include href="xml/element-multipartdemux.xml" />
@@ -71,7 +73,7 @@
     <xi:include href="xml/element-wavpackenc.xml" />
     <xi:include href="xml/element-wavpackparse.xml" />
     <xi:include href="xml/element-wavparse.xml" />
-    <!-- <xi:include href="xml/element-v4l2src.xml" /> -->
+    <xi:include href="xml/element-v4l2src.xml" />
     <xi:include href="xml/element-ximagesrc.xml" />
   </chapter>
 
@@ -101,6 +103,7 @@
     <xi:include href="xml/plugin-esdsink.xml" />
     <xi:include href="xml/plugin-flac.xml" />
     <xi:include href="xml/plugin-flxdec.xml" />
+    <xi:include href="xml/plugin-gamma.xml" />
     <xi:include href="xml/plugin-gconfelements.xml" />
     <xi:include href="xml/plugin-goom.xml" />
     <xi:include href="xml/plugin-halelements.xml" />
@@ -109,6 +112,7 @@
     <xi:include href="xml/plugin-jpeg.xml" />
     <xi:include href="xml/plugin-level.xml" />
     <xi:include href="xml/plugin-matroska.xml" />
+    <xi:include href="xml/plugin-monoscope.xml" />
     <xi:include href="xml/plugin-mulaw.xml" />
     <xi:include href="xml/plugin-multipart.xml" />
     <xi:include href="xml/plugin-navigationtest.xml" />
@@ -133,7 +137,7 @@
     <xi:include href="xml/plugin-wavenc.xml" />
     <xi:include href="xml/plugin-wavpack.xml" />
     <xi:include href="xml/plugin-wavparse.xml" />
-    <!-- <xi:include href="xml/plugin-video4linux2.xml" /> -->
+    <xi:include href="xml/plugin-video4linux2.xml" />
     <xi:include href="xml/plugin-ximagesrc.xml" />
   </chapter>
 </book>
