@@ -361,6 +361,20 @@ LEGACY_FLAC
 </SECTION>
 
 <SECTION>
+<FILE>element-gamma</FILE>
+<TITLE>gamma</TITLE>
+GstGamma
+<SUBSECTION Standard>
+GstGammaClass
+GST_GAMMA
+GST_IS_GAMMA
+GST_TYPE_GAMMA
+GST_GAMMA_CLASS
+GST_IS_GAMMA_CLASS
+gst_gamma_get_type
+</SECTION>
+
+<SECTION>
 <FILE>element-goom</FILE>
 <TITLE>goom</TITLE>
 GstGoom
@@ -487,6 +501,19 @@ GST_LEVEL_GET_CLASS
 GST_IS_LEVEL
 GST_IS_LEVEL_CLASS
 gst_level_get_type
+</SECTION>
+
+<SECTION>
+<FILE>element-monoscope</FILE>
+<TITLE>monoscope</TITLE>
+GstMonoscope
+<SUBSECTION Standard>
+GstMonoscopeClass
+GST_MONOSCOPE
+GST_IS_MONOSCOPE
+GST_TYPE_MONOSCOPE
+GST_MONOSCOPE_CLASS
+GST_IS_MONOSCOPE_CLASS
 </SECTION>
 
 <SECTION>
