@@ -1,0 +1,34 @@
+<plugin>
+  <name>gamma</name>
+  <description>Changes gamma on video images</description>
+  <filename>../../gst/videofilter/.libs/libgstgamma.so</filename>
+  <basename>libgstgamma.so</basename>
+  <version>0.10.6.1</version>
+  <license>LGPL</license>
+  <source>gst-plugins-good</source>
+  <package>GStreamer Good Plug-ins CVS/prerelease</package>
+  <origin>Unknown package origin</origin>
+  <elements>
+    <element>
+      <name>gamma</name>
+      <longname>Video gamma correction</longname>
+      <class>Filter/Effect/Video</class>
+      <description>Adjusts gamma on a video stream</description>
+      <author>Arwed v. Merkatz &lt;v.merkatz@gmx.net</author>
+      <pads>
+        <caps>
+          <name>src</name>
+          <direction>source</direction>
+          <presence>always</presence>
+          <details>video/x-raw-yuv, format=(fourcc){ IYUV, I420, YV12 }, width=(int)[ 1, 2147483647 ], height=(int)[ 1, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ]</details>
+        </caps>
+        <caps>
+          <name>sink</name>
+          <direction>sink</direction>
+          <presence>always</presence>
+          <details>video/x-raw-yuv, format=(fourcc){ IYUV, I420, YV12 }, width=(int)[ 1, 2147483647 ], height=(int)[ 1, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ]</details>
+        </caps>
+      </pads>
+    </element>
+  </elements>
+</plugin>
