@@ -1,0 +1,34 @@
+<plugin>
+  <name>monoscope</name>
+  <description>Monoscope visualization</description>
+  <filename>../../gst/monoscope/.libs/libgstmonoscope.so</filename>
+  <basename>libgstmonoscope.so</basename>
+  <version>0.10.6.1</version>
+  <license>LGPL</license>
+  <source>gst-plugins-good</source>
+  <package>GStreamer Good Plug-ins CVS/prerelease</package>
+  <origin>Unknown package origin</origin>
+  <elements>
+    <element>
+      <name>monoscope</name>
+      <longname>Monoscope</longname>
+      <class>Visualization</class>
+      <description>Displays a highly stabilised waveform of audio input</description>
+      <author>Richard Boulton &lt;richard@tartarus.org&gt;</author>
+      <pads>
+        <caps>
+          <name>sink</name>
+          <direction>sink</direction>
+          <presence>always</presence>
+          <details>audio/x-raw-int, rate=(int)[ 1, 2147483647 ], channels=(int)2, endianness=(int)1234, width=(int)16, depth=(int)16, signed=(boolean)true</details>
+        </caps>
+        <caps>
+          <name>src</name>
+          <direction>source</direction>
+          <presence>always</presence>
+          <details>video/x-raw-rgb, bpp=(int)32, depth=(int)24, endianness=(int)4321, red_mask=(int)65280, green_mask=(int)16711680, blue_mask=(int)-16777216, width=(int)256, height=(int)128, framerate=(fraction)[ 0/1, 2147483647/1 ]</details>
+        </caps>
+      </pads>
+    </element>
+  </elements>
+</plugin>
